# authorlist-shortener

./: README.md  authorlist-shortener.py  pyproject.toml
