[tool.poetry]
name = "authorlist-shortener"
version = "0.1.0"
description = ""
authors = ["Jarred Green <astrojarred@gmail.com>"]
readme = "README.md"
packages = [{include = "authorlist-shortener"}]

[tool.poetry.dependencies]
python = "^3.9"
bibtexparser = "^1.4.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
